--- a/games/liczby/styles/style.css
+++ b/games/liczby/styles/style.css
@@ -61,7 +61,19 @@ body, html {
     position: fixed;
     top: calc(55%);
     left: calc(70%);
-    width: 450px;
+    width: 455px;
+}
+
+#boolhex {
+    position: fixed;
+    top: calc(50% + 320px);
+    left: calc(50% - 105px);
+    width: 250px;
+}
+
+#hexa {
+    height: 20px;
+    width: 20px;
 }
 
 #bottom {
