--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,10 @@ body, html {
     margin: 0;
     scroll-behavior: smooth;
     background-color: #000;
+    font-family: panton, serif;
 }
 
 #main {
-    font-family: panton, serif;
     font-size: 80px;
     color: #fff;
 }
@@ -22,30 +22,79 @@ body, html {
     top: calc(50% - 128px);
     left: calc(50% - 128px);
 }
-
-#git {
+#git, #yt, #tg, #dc {
     z-index: 5;
     position: fixed;
-    top: calc(50% - 64px);
-    left: calc(50% - 264px);
+    height: 100px;
+    width: 210px;
+    text-align: left;
+    margin-left: 10px;
+    font-size: large;
+    left: calc(50% + 160px);
+}
+
+#git {
+    top: calc(50% - 236px);
+}
+#yt {
+    top: calc(50% - 108px);
+}
+#tg {
+    top: calc(50% + 20px);
+}
+#dc {
+    top: calc(50% + 148px);
+}
+
+.img {
+    vertical-align: middle;
 }
 
 #liczby {
     position: fixed;
-    top: calc(100% - 24px);
-    left: 0;
-    font-family: panton, serif;
+    top: calc(100% - 64px);
+    left: 70px;
     color: #fff;
     font-size: 20px;
     z-index: 6;
 }
+#liczby-logo {
+    position: fixed;
+    top: calc(100% - 140px);
+    left: 70px;
+    width: 125px;
+    z-index: 6;
+}
+
 #clicker {
     position: fixed;
-    top: calc(100% - 24px);
-    left: 130px;
-    font-family: panton, serif;
+    top: calc(100% - 64px);
+    left: 210px;
     color: #fff;
     font-size: 20px;
+    z-index: 6;
+}
+#clicker-logo {
+    position: fixed;
+    top: calc(100% - 140px);
+    left: 210px;
+    width: 200px;
+    z-index: 6;
+}
+
+#sudoku {
+    position: fixed;
+    top: calc(100% - 64px);
+    left: 425px;
+    color: #fff;
+    font-size: 20px;
+    z-index: 6;
+}
+#sudoku-logo {
+    position: fixed;
+    top: calc(100% - 145px);
+    left: 425px;
+    width: 80px;
     z-index: 6;
 }
 
@@ -55,7 +104,7 @@ body, html {
     top: 0;
     min-width: 100%;
     min-height: 100%;
-    filter: blur(5px);
+    filter: blur(3px);
     z-index: 1;
 }
 
@@ -69,9 +118,17 @@ body, html {
     z-index: 2;
 }
 
-a {
-    color: #fff;
+a, .hoverable {
+    color: #bbb;
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
 }
 a:visited {
+    color: #bbb;
+}
+
+a:hover, .hoverable:hover {
+    background-color: rgba(128,128,128,0.5);
     color: #fff;
+    cursor: pointer;
 }
