--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,11 @@
     src: url(../fonts/Panton-LightCaps.otf) format("opentype");
 }
 
+@font-face {
+    font-family: 'Roboto Mono', monospace;
+    src: url(../fonts/RobotoMono-ExtraLight.ttf) format("truetype");
+}
+
 body, html {
     height: 100%;
     margin: 0;
@@ -84,6 +89,10 @@ body, html {
     position: fixed;
     top: calc(50% + 140px);
     left: calc(50% - 75px);
+}
+
+#media {
+    font-family: 'Roboto Mono', monospace;
 }
 
 #git, #yt, #tg, #dc {
