--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,9 @@ body, html {
     scroll-behavior: smooth;
     background-image: url("../images/bg/0.jpg");
     font-family: panton, serif;
+    background-size: cover;
+    object-fit: cover;
+    height: 100vh;
     transition: all 2s ease-out;
 }
 
