--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body, html {
     background-image: url("../images/bg/0.jpg");
     font-family: panton, serif;
     background-size: cover;
+    background-style: cover;
     object-fit: cover;
     height: 100vh;
     transition: all 2s ease-out;
@@ -26,6 +27,7 @@ body, html {
     left: 0;
     position: fixed;
     background-size: cover;
+    background-style: cover;
     object-fit: cover;
     height: 100vh;
     animation: load 15s ease-in-out infinite;
