--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ body, html {
     background-position: center, center;
     height: 100vh;
     width: 100vw;
-    transition: all 2s ease-out;
+    transition: all 2s ease-in-out;
 }
 
 #gradient {
