--- a/styles/style.css
+++ b/styles/style.css
@@ -9,15 +9,13 @@
 }
 
 body, html {
-    height: 100%;
     margin: 0;
     scroll-behavior: smooth;
     background-image: url("../images/bg/0.jpg");
     font-family: panton, serif;
     background-size: cover;
-    background-style: cover;
     object-fit: cover;
-    background-position: center, center;
+    background-position: center;
     height: 100vh;
     width: 100vw;
     transition: all 2s ease-in-out;
@@ -29,7 +27,6 @@ body, html {
     left: 0;
     position: fixed;
     background-size: cover;
-    background-style: cover;
     object-fit: cover;
     height: 100vh;
     animation: load 15s ease-in-out infinite;
